name:              isaacranks
version:           0.0.0
cabal-version:     >= 1.8
build-type:        Simple

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    exposed-modules: Application
                     Foundation
                     Import
                     Items
                     Model
                     Model.IsaacVersion
                     Model.IsaacPool
                     Helpers.Heroku
                     Settings
                     Settings.StaticFiles
                     Settings.Development
                     Handler.Home
                     Handler.Vote
                     Handler.Ranks
                     Handler.Donate
                     Handler.Changes
                     Vote
    other-modules: Paths_isaacranks

    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -fwarn-tabs -O0
    else
        ghc-options:   -Wall -fwarn-tabs -O2

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                LambdaCase
                FlexibleContexts
                EmptyDataDecls
                NoMonomorphismRestriction
                DeriveDataTypeable
                ViewPatterns
                TupleSections
                FlexibleInstances
                RankNTypes

    build-depends: base                          >= 4          && < 5
                 , aeson                         >= 1.0        && < 1.1
                 , amazonka                      >= 1.3        && < 1.5
                 , amazonka-s3                   >= 1.3        && < 1.5
                 , base64-bytestring
                 , binary
                 , bytestring                    >= 0.9        && < 0.11
                 , clientsession
                 , conduit                       >= 1.0        && < 2.0
                 , containers
                 , data-default
                 , directory                     >= 1.1        && < 1.4
                 , esqueleto                     >= 2.4        && < 2.6
                 , extra                         >= 1.4        && < 1.6
                 , fast-logger                   >= 2.3        && < 2.5
                 , heroku
                 , hjsmin                        >= 0.1        && < 0.3
                 , http-conduit                  >= 2.1        && < 2.3
                 , http-types
                 , lens
                 , lens-aeson                    >= 1.0        && < 1.1
                 , monad-control                 >= 1.0        && < 1.1
                 , monad-logger                  >= 0.3.13     && < 0.4
                 , persistent                    >= 2.0        && < 2.7
                 , persistent-postgresql         >= 2.0        && < 2.7
                 , persistent-template           >= 2.0        && < 2.7
                 , random
                 , random-shuffle
                 , resourcet
                 , shakespeare                   >= 2.0        && < 2.1
                 , system-filepath
                 , template-haskell
                 , text                          >= 0.11       && < 2.0
                 , time
                 , transformers
                 , uri-bytestring                >= 0.1        && < 0.3
                 , wai
                 , wai-extra                     >= 3.0        && < 3.1
                 , wai-logger                    >= 2.2        && < 2.4
                 , warp                          >= 3.0        && < 3.3
                 , wreq                          >= 0.4        && < 0.6
                 , xml-conduit
                 , xml-lens
                 , yaml                          >= 0.8        && < 0.9
                 , yesod                         >= 1.4        && < 1.5
                 , yesod-auth                    >= 1.4        && < 1.5
                 , yesod-core                    >= 1.4        && < 1.5
                 , yesod-form                    >= 1.4        && < 1.5
                 , yesod-static                  >= 1.5        && < 1.6
                 , zlib                          >= 0.5        && < 0.7

executable         isaacranks
    if flag(library-only)
        Buildable: False

    main-is:           main.hs
    hs-source-dirs:    app
    build-depends:     base
                     , isaacranks
                     , yesod

    ghc-options:       -threaded -O2 -rtsopts -with-rtsopts=-N

executable rebuildranks
    if flag(library-only)
        Buildable: False

    main-is:           rebuild.hs
    hs-source-dirs:    app
    extensions:        FlexibleContexts
    build-depends:     base
                     , isaacranks
                     , yesod
                     , persistent
                     , persistent-postgresql
                     , monad-logger
                     , transformers
                     , time

    ghc-options:       -threaded -O2 -rtsopts -with-rtsopts=-N

executable load-data
    if flag(library-only)
        Buildable: False

    main-is:           load.hs
    hs-source-dirs:    app
    build-depends:     base
                     , isaacranks
                     , yesod
                     , persistent
                     , persistent-postgresql
                     , monad-logger

    ghc-options:       -threaded -O2 -rtsopts -with-rtsopts=-N

test-suite test
    type:              exitcode-stdio-1.0
    main-is:           Spec.hs
    hs-source-dirs:    test
    ghc-options:       -Wall

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                EmptyDataDecls
                NoMonomorphismRestriction
                DeriveDataTypeable
                ViewPatterns
                TupleSections

    build-depends: base
                 , isaacranks
                 , yesod-test >= 1.4 && < 1.6
                 , yesod-core
                 , yesod
                 , persistent
                 , persistent-postgresql
                 , resourcet
                 , monad-logger
                 , transformers
                 , hspec
